--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="assets/icon/logotype.svg">
-    <link rel="stylesheet" href="assets/styles/normalize.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
-    <title>Findtrend</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <!-- Света верстает область макета под цифрой 1 -->
-    <header></header>
-    <main>
-    <!-- Вероника верстает область макета под цифрой 2 -->
-        <div></div>
-    <!-- Вика верстает область макета под цифрой 3 -->
-        <div></div>
-    <!-- Лена Лущик верстает область макета под цифрой 4 -->
-    <div></div>
-    <!-- Лола верстает область макета под цифрой 5 -->
-    <div></div>
-    <!-- Настя верстает область макета под цифрой 6 -->
-    <div></div>
-    <!-- Лена Милещенко верстает область макета под цифрой 7 -->
-    <div></div>
-    <!-- Надя верстает область макета под цифрой 8 -->
-    <div></div>
-    <!-- Ирина верстает область макета под цифрой 9 -->
-    <div></div>
-    </main>
+    <div class="block-green">
+    <div class="container-green">
+        <div class="group-1">
+            <img class="image-1" src="assets/svg/Arrow4.svg" alt="left-arrow">
+            <div class="you-just ">you just need one tab now</div>
+        </div>
+        <div class="a-solution-for">A solution for your browser tabs and don’t make your device get slower over
+        time. Get ease and faster to discover a trend with just one tab.</div>
+    <div class="block-white"></div>
+    <div class="open-new-tabs">Open new tabs is sh*t</div>
+    <div class="block-black">
+        <div class="element-1"></div>
+        <div class="group-3">
+            <img class="image-3" src="/assets/svg/Group16.svg" alt="logo">
+            <div class="text-1">Findtrend - Elon Musk</div>
+            <img class="image-4" src="/assets/svg/Group1.svg" alt="white-cross">
+        </div>
+    </div>
+        <div class="group-2">
+            <img class="image-2" src="assets/svg/Arrow6.svg" alt="right-arrow">
+            <div class="solution-for-discover">solution for discover a trend</div>
+        </div>
+</div>
+</div>
 </body>
 </html>
