Разделила имеющийся код html+css на логические блоки, добавила логотипы, надпись, крестик в html+css

--- a/index.html
+++ b/index.html
@@ -7,28 +7,68 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    <div class="block-green">
-    <div class="container-green">
-        <div class="group-1">
-            <img class="image-1" src="assets/svg/Arrow4.svg" alt="left-arrow">
-            <div class="you-just ">you just need one tab now</div>
-        </div>
-        <div class="a-solution-for">A solution for your browser tabs and don’t make your device get slower over
+    <header>
+
+    </header>
+    <main>
+        <!-- Часть Вики -->
+        <!-- блок Твиттер -->
+        <aside>
+            <div class="icon_search">
+                <img class="icon" src="./assets/icon/twitter.svg" alt="Логотип Twitter">
+                <span>Cryptopunk - Search</span>
+            </div>
+            <img class="cross" src="./assets/icon/cross.svg" alt="">
+        </aside>
+        <!-- блок Пинтерест-->
+        <aside>
+            <div class="icon_search">
+                <img class="icon" src="./assets/icon/pinterest.svg" alt="Логотип Pinterest">
+                <span>Popular Design - Search</span>
+            </div>
+            <img class="cross" src="./assets/icon/cross.svg" alt="">
+        </aside>
+        <!-- блок Фэйсбук -->
+        <aside>
+            <div class="icon_search">
+                <img class="icon" src="./assets/icon/facebook.svg" alt="Логотип Facebook">
+                <span>Product Design - Search</span>
+            </div>
+            <img class="cross" src="./assets/icon/cross.svg" alt="">
+        </aside>
+        <!-- блок Дриблинг-->
+        <aside>
+            <div class="icon_search">
+                <img class="icon" src="./assets/icon/ball.svg" alt="Логотип Dribling">
+                <span>Elon Musk - Search</span>
+            </div>
+            <img class="cross" src="./assets/icon/cross.svg" alt="">
+        </aside>
+
+        <!--Часть Лены -->
+        <div class="block-green">
+        <div class="container-green">
+            <div class="group-1">
+                <img class="image-1" src="assets/svg/Arrow4.svg" alt="left-arrow">
+                <div class="you-just ">you just need one tab now</div>
+            </div>
+            <div class="a-solution-for">A solution for your browser tabs and don’t make your device get slower over
         time. Get ease and faster to discover a trend with just one tab.</div>
-    <div class="block-white"></div>
-    <div class="open-new-tabs">Open new tabs is sh*t</div>
-    <div class="block-black">
-        <div class="element-1"></div>
-        <div class="group-3">
-            <img class="image-3" src="/assets/svg/Group16.svg" alt="logo">
-            <div class="text-1">Findtrend - Elon Musk</div>
+        <div class="block-white"></div>
+        <div class="open-new-tabs">Open new tabs is sh*t</div>
+        <div class="block-black">
+            <div class="element-1"></div>
+            <div class="group-3">
+                <img class="image-3" src="/assets/svg/Group16.svg" alt="logo">
+                <div class="text-1">Findtrend - Elon Musk</div>
             <img class="image-4" src="/assets/svg/Group1.svg" alt="white-cross">
+            </div>
         </div>
-    </div>
-        <div class="group-2">
-            <img class="image-2" src="assets/svg/Arrow6.svg" alt="right-arrow">
-            <div class="solution-for-discover">solution for discover a trend</div>
-        </div>
+            <div class="group-2">
+                <img class="image-2" src="assets/svg/Arrow6.svg" alt="right-arrow">
+                <div class="solution-for-discover">solution for discover a trend</div>
+            </div>
+    </main>
 </div>
 </div>
 </body>
