--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Vithkuqi:wght@400..700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -13,36 +15,44 @@
     <main>
         <!-- Часть Вики -->
         <!-- блок Твиттер -->
-        <aside>
-            <div class="icon_search">
+        <aside id="search">
+            <span class="icon_search">
                 <img class="icon" src="./assets/icon/twitter.svg" alt="Логотип Twitter">
                 <span>Cryptopunk - Search</span>
-            </div>
-            <img class="cross" src="./assets/icon/cross.svg" alt="">
+            </span>
+            <div>
+                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
+            </div>                
         </aside>
         <!-- блок Пинтерест-->
-        <aside>
-            <div class="icon_search">
+        <aside id="search">
+            <span class="icon_search" id="under">
                 <img class="icon" src="./assets/icon/pinterest.svg" alt="Логотип Pinterest">
                 <span>Popular Design - Search</span>
+            </span>
+            <div class="opacity">
+                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
             </div>
-            <img class="cross" src="./assets/icon/cross.svg" alt="">
         </aside>
         <!-- блок Фэйсбук -->
-        <aside>
-            <div class="icon_search">
+        <aside id="search">
+            <span class="icon_search" id="under">
                 <img class="icon" src="./assets/icon/facebook.svg" alt="Логотип Facebook">
                 <span>Product Design - Search</span>
+            </span>
+            <div class="opacity">
+                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
             </div>
-            <img class="cross" src="./assets/icon/cross.svg" alt="">
         </aside>
         <!-- блок Дриблинг-->
-        <aside>
-            <div class="icon_search">
+        <aside id="search">
+            <span class="icon_search">
                 <img class="icon" src="./assets/icon/ball.svg" alt="Логотип Dribling">
                 <span>Elon Musk - Search</span>
+            </span>
+            <div>
+                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">     
             </div>
-            <img class="cross" src="./assets/icon/cross.svg" alt="">
         </aside>
 
         <!--Часть Лены -->
