--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 
     </header>
     <main>
+         <!-- Часть Вероники -->
+        <article class="firstPage">
+            <h1 class="title">Minimize your tabs. <br>Find the trends!
+            </h1>
+            <div><p>Findtrend don’t let your computer memories consumes all of those browser tabs. <br> Findtrend let you gathers all of your favorite website into one place.</p></div>
+            <a href="#" class="button">Get Started <span>🔥</span></a>
+            <img class="icon" src="assets/images/img-hero.png" alt="подпись"></img>
+        </article>
         <!-- Часть Вики -->
         <!-- блок Твиттер -->
         <aside id="search">
