--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="title">Minimize your tabs. <br>Find the trends!
             </h1>
             <div class="subtitle"><p class="psubtitle">Don’t let your computer memories consumes all of those browser tabs. <br> Findtrend let you gathers all of your favorite website into one place.</p></div>
-            <button type="button"><a href="#" class="button">Get Started 🔥</a></button>
+            <button type="button"><a href="#" class="button1">Get Started 🔥</a></button>
             <img class="pic" src="assets/images/img-hero.png" alt="подпись"></img>
         </article>
         <!-- Часть Вики -->
