добавила заголовок , иконки соцсетей

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </header>
     <main>
-         <!-- Часть Вероники -->
+        <!-- Часть Вероники -->
         <article class="firstPage">
             <h1 class="title">Minimize your tabs. <br>Find the trends!
             </h1>
@@ -87,6 +87,22 @@
                 <div class="solution-for-discover">solution for discover a trend</div>
             </div>
     </main>
+</div>
+</div>
+<!-- блок Лены М -->
+<body>
+    <main>
+<h2>All platform connect to Findtrend</h2>
+<div class="container">
+    <div class="image">
+    <img src="assets/img/FB.png" alt="фейсбук" >
+    <img src="assets/img/TV.png" alt="твиттер" >
+    <img src="assets/img/logo.png" alt="лого" >
+    <img src="assets/img/пинтерест.png" alt="пинтерест">
+    <img src="assets/img/M.png" alt="M">
+    <img src="assets/img/logo2.png" alt="лого2">
+    <img src="assets/img/in.png" alt="in">
+    <img src="assets/img/VK.png" alt="VK">
 </div>
 </div>
 </body>
