--- a/index.html
+++ b/index.html
@@ -7,11 +7,39 @@
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="./assets/styles/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Vithkuqi:wght@400..700&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Часть Светы начало -->
     <header>
-
-    </header>
+        <div class="menu">
+            <!-- Логотип -->
+            <div class="logo">
+              <img
+                class="img_logo"
+                src="assets/image/svg/Vector.svg"
+                alt="Логотип"
+              />
+              <p class="logo_name">Findtrend</p>
+            </div>
+            <!-- Меню навигации -->
+            <nav>
+              <ul class="list">
+                <li><a class="list_item_1" href="list_item_1">About</a></li>
+                <li><a class="list_item_2" href="list_item_2">How it work</a></li>
+                <li><a class="list_item_3" href="list_item_3">Pricing</a></li>
+                <li><a class="list_item_4" href="list_item_4">Solution</a></li>
+                <li><a class="list_item_5" href="list_item_5">Features</a></li>
+              </ul>
+            </nav>
+            <!-- Кнопки -->
+            <div class="menu_buttons">
+              <button class="button_login">Login</button>
+              <button class="button_register">Register</button>
+            </div>
+          </div>
+        </header>
+    <!-- Часть Светы конец -->
     <main>
         <!-- Часть Вероники -->
         <article class="firstPage">
