Света отредактировала изображение в логотипе

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
               <img
                 class="img_logo"
-                src="assets/image/svg/Vector.svg"
+                src="assets/icon/logotype.svg"
                 alt="Логотип"
               />
               <p class="logo_name">Findtrend</p>
