--- a/index.html
+++ b/index.html
@@ -51,45 +51,48 @@
         </article>
         <!-- Часть Вики -->
         <!-- блок Твиттер -->
-        <aside id="search">
-            <span class="icon_search">
-                <img class="icon" src="./assets/icon/twitter.svg" alt="Логотип Twitter">
-                <span>Cryptopunk - Search</span>
-            </span>
-            <div>
-                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
-            </div>                
-        </aside>
-        <!-- блок Пинтерест-->
-        <aside id="search">
-            <span class="icon_search" id="under">
-                <img class="icon" src="./assets/icon/pinterest.svg" alt="Логотип Pinterest">
-                <span>Popular Design - Search</span>
-            </span>
-            <div class="opacity">
-                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
-            </div>
-        </aside>
-        <!-- блок Фэйсбук -->
-        <aside id="search">
-            <span class="icon_search" id="under">
-                <img class="icon" src="./assets/icon/facebook.svg" alt="Логотип Facebook">
-                <span>Product Design - Search</span>
-            </span>
-            <div class="opacity">
-                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
-            </div>
-        </aside>
-        <!-- блок Дриблинг-->
-        <aside id="search">
-            <span class="icon_search">
-                <img class="icon" src="./assets/icon/ball.svg" alt="Логотип Dribling">
-                <span>Elon Musk - Search</span>
-            </span>
-            <div>
-                <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">     
-            </div>
-        </aside>
+        <div class="requests">
+            <aside id="search">
+                <span class="icon_search">
+                    <img class="icon" src="./assets/icon/twitter.svg" alt="Логотип Twitter">
+                    <span>Cryptopunk - Search</span>
+                </span>
+                <div>
+                    <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
+                </div>                
+            </aside>
+            <!-- блок Пинтерест-->
+            <aside id="search">
+                <span class="icon_search" id="under">
+                    <img class="icon" src="./assets/icon/pinterest.svg" alt="Логотип Pinterest">
+                    <span>Popular Design - Search</span>
+                </span>
+                <div class="opacity">
+                    <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
+                </div>
+            </aside>
+            <!-- блок Фэйсбук -->
+            <aside id="search">
+                <span class="icon_search" id="under">
+                    <img class="icon" src="./assets/icon/facebook.svg" alt="Логотип Facebook">
+                    <span>Product Design - Search</span>
+                </span>
+                <div class="opacity">
+                    <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">
+                </div>
+            </aside>
+            <!-- блок Дриблинг-->
+            <aside id="search">
+                <span class="icon_search">
+                    <img class="icon" src="./assets/icon/ball.svg" alt="Логотип Dribling">
+                    <span>Elon Musk - Search</span>
+                </span>
+                <div>
+                    <img class="cross" src="./assets/icon/cross.svg" alt="Крестик">     
+                </div>
+            </aside>
+        </div>
+        <!--Конец блока Вики-->
 
         <!--Часть Лены -->
         <div class="block-green">
