Выставила блоки как на макете(углы, наложение), добавила градиент

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- Часть Вики -->
         <!-- блок Твиттер -->
         <div class="requests">
-            <aside id="search">
+            <aside class="social_media" id="twitter">
                 <span class="icon_search">
                     <img class="icon" src="./assets/icon/twitter.svg" alt="Логотип Twitter">
                     <span>Cryptopunk - Search</span>
@@ -62,7 +62,7 @@
                 </div>                
             </aside>
             <!-- блок Пинтерест-->
-            <aside id="search">
+            <aside class="social_media" id="pinterest">
                 <span class="icon_search" id="under">
                     <img class="icon" src="./assets/icon/pinterest.svg" alt="Логотип Pinterest">
                     <span>Popular Design - Search</span>
@@ -72,7 +72,7 @@
                 </div>
             </aside>
             <!-- блок Фэйсбук -->
-            <aside id="search">
+            <aside class="social_media" id="facebook">
                 <span class="icon_search" id="under">
                     <img class="icon" src="./assets/icon/facebook.svg" alt="Логотип Facebook">
                     <span>Product Design - Search</span>
@@ -82,7 +82,7 @@
                 </div>
             </aside>
             <!-- блок Дриблинг-->
-            <aside id="search">
+            <aside class="social_media" id="dribling">
                 <span class="icon_search">
                     <img class="icon" src="./assets/icon/ball.svg" alt="Логотип Dribling">
                     <span>Elon Musk - Search</span>
