Изменила название сайта, порядок css, добавила логотип в head; изменила тег main на div в блоке Лены М, чтобы не было повторения тега main в коде

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <title>Findtrend</title>
     <link rel="stylesheet" href="./assets/styles/normalize.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="shortcut icon" href="assets/icon/logotype.svg">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Vithkuqi:wght@400..700&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
@@ -123,7 +124,7 @@
 
 <!-- блок Лены М --> 
 
-    <main>
+<div>
 <h2>All platform connect to Findtrend</h2>
 <div class="container">
     <div class="image">
@@ -219,5 +220,6 @@
 </div>
 
 <!-- конец блока Нади -->
+</main>
 </body>
 </html>
