--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <h1 class="title">Minimize your tabs. <br>Find the trends!
             </h1>
             <div class="subtitle"><p class="psubtitle">Don’t let your computer memories consumes all of those browser tabs. <br> Findtrend let you gathers all of your favorite website into one place.</p></div>
+            <div class="buttomTekst">
             <button type="button" class="buttonGetStarted">Get Started 🔥</button>
             <img class="pic" src="assets/images/img-hero.png" alt="подпись"></img>
+            </div>
         </article>
         <!-- Часть Вики -->
         <!-- блок Твиттер -->
