Внесла изменения в код и style.css за Лену, которая отвечает за 4 область

--- a/index.html
+++ b/index.html
@@ -98,31 +98,31 @@
         <!--Конец блока Вики-->
 
         <!--Часть Лены -->
-        <div class="block-green">
         <div class="container-green">
-            <div class="group-1">
-                <img class="image-1" src="assets/svg/Arrow4.svg" alt="left-arrow">
-                <div class="you-just ">you just need one tab now</div>
-            </div>
-            <div class="a-solution-for">A solution for your browser tabs and don’t make your device get slower over
-        time. Get ease and faster to discover a trend with just one tab.</div>
-        <div class="block-white"></div>
-        <div class="open-new-tabs">Open new tabs is sh*t</div>
-        <div class="block-black">
-            <div class="element-1"></div>
-            <div class="group-3">
-                <img class="image-3" src="/assets/svg/Group16.svg" alt="logo">
-                <div class="text-1">Findtrend - Elon Musk</div>
-            <img class="image-4" src="/assets/svg/Group1.svg" alt="white-cross">
+            <div class="block-green">
+                <div class="open-new-tabs">Open new tabs is sh*t</div>
+                <div class="box-group">
+                    <div class="group-1">
+                        <img class="image-1" src="assets/icon/arrow1.svg" alt="left-arrow">
+                        <div class="solution-for-discover">solution for discover a trend</div>
+                    </div>
+                    <div class="group-2">
+                        <div class="black-group-2">
+                            <img class="image-2" src="assets/icon/logotype.svg" alt="logo">
+                            <div class="text-1">Findtrend - Elon Musk</div>
+                            <img class="image-3" src="assets/icon/cross.svg" alt="cross">
+                        </div>
+                    </div>
+                    <div class="group-3">
+                        <div class="you-just">You just need one tab now</div>
+                        <img class="image-4" src="assets/icon/arrow2.svg" alt="right-arrow">
+                    </div>
+                </div>
+                    <div class="a-solution-for">A solution for your browser tabs and don’t make your device get slower over
+                time. Get ease and faster to discover a trend with just one tab.</div>
+                </div>
             </div>
         </div>
-            <div class="group-2">
-                <img class="image-2" src="assets/svg/Arrow6.svg" alt="right-arrow">
-                <div class="solution-for-discover">solution for discover a trend</div>
-            </div>
-    </main>
-</div>
-</div>
 
 <!-- блок Лены М --> 
 
