--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Findtrend</title>
     <link rel="stylesheet" href="./assets/styles/normalize.css">
     <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/adaptive.css">
     <link rel="shortcut icon" href="assets/icon/logotype.svg">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@100..900&family=Noto+Sans+Vithkuqi:wght@400..700&family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -24,7 +25,7 @@
               <p class="logo_name">Findtrend</p>
             </div>
             <!-- Меню навигации -->
-            <nav>
+            <nav class="navbar">
               <ul class="list">
                 <li><a class="list_item_1" href="list_item_1">About</a></li>
                 <li><a class="list_item_2" href="list_item_2">How it work</a></li>
@@ -32,6 +33,10 @@
                 <li><a class="list_item_4" href="list_item_4">Solution</a></li>
                 <li><a class="list_item_5" href="list_item_5">Features</a></li>
               </ul>
+              <!-- Иконка бургер-меню -->
+                <div class="nav_burger">
+                    <span></span>
+                </div>
             </nav>
             <!-- Кнопки -->
             <div class="menu_buttons">
@@ -223,5 +228,11 @@
 
 <!-- конец блока Нади -->
 </main>
+<script>
+    document.querySelector('.nav_burger').addEventListener('click', function() {
+        this.classList.toggle('active');
+        document.querySelector('.navbar').classList.toggle('open');
+    })
+</script>
 </body>
 </html>
