добавила шрифт, исправила ошибки

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 </div>
 </div>
 <!-- блок Лены М -->
-<body>
-    <main>
+
+    <section>
 <h2>All platform connect to Findtrend</h2>
 <div class="container">
     <div class="image">
@@ -133,5 +133,6 @@
     <img src="assets/img/VK.png" alt="VK">
 </div>
 </div>
+</section>
 </body>
 </html>
