добавила иконки соцсетей (дубль 2)

--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
             <h2>All platform connect to Findtrend</h2>
             <div class="container">
                 <div class="image">
-                    <img src="assets/images/fb.png" alt="фейсбук">
-                    <img src="assets/images/tw.png" alt="твиттер">
-                    <img src="assets/img/logo.png"  alt="лого">
-                    <img src="assets/img/пинтерест.png" alt="пинтерест">
-                    <img src="assets/images/m.png"  alt="M">
-                    <img src="assets/img/logo2.png" alt="лого2">
-                    <img src="assets/img/in.png"    alt="in">
-                    <img src="assets/images/vk.png" alt="VK">
+                    <img src="assets/images/fb.png"    alt="фейсбук">
+                    <img src="assets/images/tw.png"    alt="твиттер">
+                    <img src="assets/images/logo.png"  alt="лого">
+                    <img src="assets/images/pinterest.png" alt="пинтерест">
+                    <img src="assets/images/m.png"     alt="M">
+                    <img src="assets/images/logo2.png" alt="лого2">
+                    <img src="assets/images/in.png"    alt="in">
+                    <img src="assets/images/vk.png"    alt="VK">
                 </div>
             </div>
     </section>
