добавила tweet1 и tweet2

--- a/index.html
+++ b/index.html
@@ -159,6 +159,41 @@
                     <img src="assets/images/vk.png"    alt="VK">
                 </div>
             </div>
+            <!-- tweet1 -->
+<div class="tweet1">
+    <div id="pic1">
+        <img src="assets/images/ava1.png" alt="аватарка" align: left; width: 60px; height: 274px; ></div>
+        <div id="text1">
+        <span >Elon Musk</span>
+        <img src="assets/images/stic.png" alt="галочка" width:15px; height="15px"  >
+        <span >@elonmusk . Mar7</span><span >...</span></div>
+        <div id="text2">
+        <p>Replying to <span class="color">@elonmusk</span>
+        <br> For thous who (mistakenly) think this is a radiation risk,pick what yuo think <br>is the worst location. I will travel there&eat locally grown food on TV.</p>
+        </div>
+        </div>
+        <!-- tweet1 -->
+        <!-- tweet2 -->
+    <div class="tweet2">
+        <div id="pic">
+            <img src="assets/images/ava1.png" alt="аватарка" class="image3"></div>
+            <div id="text">
+            <span class="elon">Elon Musk</span>
+            <div > <b>Sawyer Merritt</b>
+            <img src="assets/images/grafik.png.png" alt=""width:15px; height="15px">
+            <img src="assets/images/raketa.png.png" alt=""width:15px; height="15px">
+            <span class="data">@Sawyer Merritt.17p</span><span class="ellipsis">...</span>
+            <p class="news">NEWS:SEC, following Musk's criticism, ready to distribute funds from Tesla <br>settlement.</p>
+            <p>The top U.S. securities regulator asked a judge for permission to distribute <br>$40 million to  investors it obtained  in a 2018 civil settlement with Elon Musk <br>and Tesla.</p>
+        </div>
+        <figure class="sign">
+        <p><img src="assets/images/Muskfoto.png" alt="Musk foto" width: 700px; height: 200px;></p>
+        <figcaption>reuters.com
+            <p>SEC.following Musk's criticism, ready to distributefunds from Tesla s ...</p>
+            <p>The top U.S. securities relulator asked judge for permission to <br>distribute $40 million to  investors it obtained  in a 2018 civil settlemen... </p></figcaption>
+        </figure>
+    </div>
+        <!-- tweet2 -->
     </section>
 
     <!-- блок Нади -->
