--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
     <div id="pic1">
         <img src="assets/images/ava1.png" alt="аватарка" align: left; width: 60px; height: 274px; ></div>
         <div id="text1">
-        <span >Elon Musk</span>
-        <img src="assets/images/stic.png" alt="галочка" width:15px; height="15px"  >
-        <span >@elonmusk . Mar7</span><span >...</span></div>
+        <span>Elon Musk</span>
+        <img src="assets/images/stic.png" alt="галочка" width:15px; height:15px;>
+        <span >@elonmusk . Mar7</span></div><span >...</span>
+        </div>
         <div id="text2">
         <p>Replying to <span class="color">@elonmusk</span>
         <br> For thous who (mistakenly) think this is a radiation risk,pick what yuo think <br>is the worst location. I will travel there&eat locally grown food on TV.</p>
@@ -180,14 +181,14 @@
             <div id="text">
             <span class="elon">Elon Musk</span>
             <div > <b>Sawyer Merritt</b>
-            <img src="assets/images/grafik.png.png" alt=""width:15px; height="15px">
-            <img src="assets/images/raketa.png.png" alt=""width:15px; height="15px">
+            <img src="assets/images/grafik.png.png" alt="график" width:10px; height="20px";>
+            <img src="assets/images/raketa.png.png" alt="ракета" width:15px; height="20px";>
             <span class="data">@Sawyer Merritt.17p</span><span class="ellipsis">...</span>
             <p class="news">NEWS:SEC, following Musk's criticism, ready to distribute funds from Tesla <br>settlement.</p>
             <p>The top U.S. securities regulator asked a judge for permission to distribute <br>$40 million to  investors it obtained  in a 2018 civil settlement with Elon Musk <br>and Tesla.</p>
         </div>
         <figure class="sign">
-        <p><img src="assets/images/Muskfoto.png" alt="Musk foto" width: 700px; height: 200px;></p>
+        <p><img src="assets/images/Muskfoto.png" alt="Musk foto" width: 900px; height: 200px;></p>
         <figcaption>reuters.com
             <p>SEC.following Musk's criticism, ready to distributefunds from Tesla s ...</p>
             <p>The top U.S. securities relulator asked judge for permission to <br>distribute $40 million to  investors it obtained  in a 2018 civil settlemen... </p></figcaption>
