добавила адаптивную версию

--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
         <!-- блок Лены М -->
 
         <div>
-            <h2>All platform connect to Findtrend</h2>
+            <h2 class="brd">All platform connect to Findtrend</h2>
             <div class="container">
-                <div class="image">
-                    <img src="assets/images/fb.png"    alt="фейсбук">
-                    <img src="assets/images/tw.png"    alt="твиттер">
-                    <img src="assets/images/logo.png"  alt="лого">
-                    <img src="assets/images/pinterest.png" alt="пинтерест">
-                    <img src="assets/images/m.png"     alt="M">
-                    <img src="assets/images/logo2.png" alt="лого2">
-                    <img src="assets/images/in.png"    alt="in">
-                    <img src="assets/images/vk.png"    alt="VK">
+                <div class="img">
+                    <img src="assets/images/fb.png"    alt="фейсбук" class="img_1">
+                    <img src="assets/images/tw.png"    alt="твиттер" class="img_2">
+                    <img src="assets/images/logo.png"  alt="лого" class="img_3">
+                    <img src="assets/images/pinterest.png" alt="пинтерест" class="img_4">
+                    <img src="assets/images/m.png"     alt="M" class="img_5">
+                    <img src="assets/images/logo2.png" alt="лого2" class="img_6">
+                    <img src="assets/images/in.png"    alt="in" class="img_7">
+                    <img src="assets/images/vk.png"    alt="VK" class="img_8">
                 </div>
             </div>
             <!-- tweet1 -->
@@ -191,7 +191,7 @@
         </div>
         
         <figure class="sign">
-        <img src="assets/images/Muskfoto.png" alt="Musk foto"style="width: 90%; height: 300px";>
+        <img src="assets/images/Muskfoto.png" alt="Musk foto" class="sign_foto">
         <figcaption> <i>reuters.com</i>
             <p>SEC.following Musk's criticism, ready to distributefunds from Tesla s ...</p>
             <p>The top U.S. securities relulator asked judge for permission to <br>distribute $40 million to  investors it obtained  in a 2018 civil settlemen... </p>
