--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@
             <img class="image-2" src="assets/svg/Arrow6.svg" alt="right-arrow">
             <div class="solution-for-discover">solution for discover a trend</div>
         </div>
-    
+    <!--блок Ирины Б-->
+        <div class="white_container">
+            <p class="black_text">Findtrend helps you to increase your productivity 
+                and reduce your computer's memory load, <span class="gray_text">an application that can fulfill your 
+                daily browsing needs.</span></p>
+        </div>
     
     <!-- блок Лены М -->
 
