добавила в карточках гвлочки, вставила разделяющие полоски

--- a/index.html
+++ b/index.html
@@ -207,12 +207,10 @@
     </section>
 
     <!-- блок Нади -->
-
     <div class="all-container">
         <div class="pricing-container">
             <!-- Заголовок -->
             <h1 class="offer">Get your best deal</h1>
-
             <!-- Переключатель (Monthly/Yearly) -->
             <div class="switcher">
                 <span>Monthly</span>
@@ -222,7 +220,6 @@
                         <span class="slider"></span>
                     </label>
                 </div>
-
                 <span>Yearly</span>
                 <div class="discount-banner">
                     <div class="text-discount">
@@ -235,7 +232,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Тарифы -->
             <div class="pricing-cards">
                 <!-- Первый тариф -->
@@ -252,11 +248,11 @@
                     </ul>
                     <button class="btn">Start Free Trial</button>
                 </div>
-
                 <!-- Второй тариф -->
                 <div class="card regular">
                     <h3>Regular</h3>
                     <p class="description">Recommended for personal pro</p>
+                    <div class="line"></div>
                     <div class="price">$20 <span class="time">/ Month</span></div>
                     <ul class="features">
                         <li>Up to 15 pages each group</li>
@@ -264,13 +260,13 @@
                         <li>Up to 10 group page</li>
                         <li>15 Days group page saved</li>
                     </ul>
-                    <button class="btn-white">Start Free Trial</button>
+                    <button class="btn-black">Start Free Trial</button>
                 </div>
-
                 <!-- Третий тариф -->
                 <div class="card premium">
                     <h3>Premium</h3>
                     <p class="description">Packet for Startup & Company</p>
+                    <div class="line"></div>
                     <div class="price">$48 <span class="time">/ Month</span></div>
                     <ul class="features">
                         <li>Unlimited group pages</li>
