Убрала в коде лишние теги (img, div, p) и добавила недостающий тег (span)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="buttomTekst">
                 <button type="button" class="buttonGetStarted">Get Started 🔥</button>
-                <img class="pic" src="assets/images/img-hero.png" alt="подпись"></img>
+                <img class="pic" src="assets/images/img-hero.png" alt="подпись">
             </div>
         </article>
         <!-- Часть Вики -->
@@ -132,7 +132,6 @@
                     time. Get ease and faster to discover a trend with just one tab.</div>
             </div>
         </div>
-        </div>
     <!--блок Ирины Б-->
         <div class="white_container">
             <p class="black_text">Findtrend helps you to increase your productivity 
@@ -167,7 +166,7 @@
         <div class="ellipsis"><b>...</b></div>
         </div>
         <div id="text2">
-        <p>Replying to <span class="color">@elonmusk</p>
+        <p>Replying to <span class="color">@elonmusk</span>
         <br> For thous who (mistakenly) think this is a radiation risk,pick what yuo think <br>is the worst location. I will travel there&eat locally grown food on TV.</p>
         </div>
         </div>
@@ -194,6 +193,7 @@
             <p>The top U.S. securities relulator asked judge for permission to <br>distribute $40 million to  investors it obtained  in a 2018 civil settlemen... </p>
         </figcaption>
         </figure></div>
+        </div>
         </section>
         <!-- tweet2 -->
         <!-- конец блока Лены М -->
