Добавила свою часть кода и css

--- a/index.html
+++ b/index.html
@@ -144,7 +144,77 @@
                 and reduce your computer's memory load, <span class="gray_text">an application that can fulfill your 
                 daily browsing needs.</span></p>
         </div>
-    
+        <!-- блок Настя -->
+        <div class="partner_section">
+            <div class="text">Findtrend make +1000 Startup grow</div>
+                <div class="brands">
+                    <div class="rectangle_20">
+                        <div class="microsoft" style="background-image: url(assets/images/image\ 116.png);">
+                        </div>
+                    </div>
+                    <div class="box_1">
+                        <div class="allianz" style="background-image: url(assets/images/image\ 128.png);">
+                        </div>
+                    </div>
+                    <div class="box_1">
+                        <div class="upwork" style="background-image: url(assets/images/image\ 121.png);">
+                        </div>
+                    </div>
+                    <div class="box_1">
+                        <div class="volvo" style="background-image: url(assets/images/image\ 119.png);">
+                        </div>
+                    </div>
+                    <div class="rectangle_29">
+                        <div class="grab" style="background-image: url(assets/images/image\ 125.png);">
+                        </div>
+                    </div>
+                    <div class="box_2">
+                        <div class="verizon" style="background-image: url(assets/images/image\ 122.png);">
+                        </div>
+                    </div>
+                    <div class="box_2">
+                        <div class="coinbase" style="background-image: url(assets/images/image\ 133.png);">
+                        </div>
+                    </div>
+                    <div class="box_2">
+                        <div class="expedia" style="background-image: url(assets/images/image\ 129.png);">
+                        </div>
+                    </div>
+                    <div class="rectangle_21">
+                        <div class="airtable" style="background-image: url(assets/images/image\ 117.png);">
+                        </div>
+                    </div>
+                    <div class="box_3">
+                        <div class="magento" style="background-image: url(assets/images/image\ 126.png);">
+                        </div>
+                    </div>
+                    <div class="box_3">
+                        <div class="carrera" style="background-image: url(assets/images/image\ 120.png);">
+                        </div>
+                    </div>
+                    <div class="box_3">
+                        <div class="bonanza" style="background-image: url(assets/images/image\ 124.png);">
+                        </div>
+                    </div>
+                    <div class="rectangle_34">
+                        <div class="wetransfer" style="background-image: url(assets/images/image\ 132.png);">
+                        </div>
+                    </div>
+                    <div class="box_4">
+                        <div class="suzuki" style="background-image: url(assets/images/image\ 127.png);">
+                        </div>
+                    </div>
+                    <div class="box_4">
+                        <div class="algolia" style="background-image: url(assets/images/image\ 118.png);">
+                        </div>
+                    </div>
+                    <div class="box_4">
+                        <div class="heineken" style="background-image: url(assets/images/image\ 130.png);">
+                        </div>
+                    </div>
+                </div>
+            </div>
+    <!--Конец части Настя-->
     <!-- блок Лены М -->
     <section>
     <div>
