Внесла изменения в код, чтобы расположить элементы в центре (часть Лены М). Также внесла изменения в файлы style.css и adaptive.css, чтобы сделать 6 и 7 области адаптивными для мобильной версии.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <!--Конец части Настя-->
     <!-- блок Лены М -->
     <section>
-    <div>
+    <div class="flex_container_mask">
             <h2 class="brd">All platform connect to Findtrend</h2>
             <div class="container">
                 <div class="img">
